--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./imgs/logo.png">
     <title>Coin Flip</title>
 </head>
 <body>
+    <h1 id="title">Coin <span>Flip</span></h1>
     <div class="container">
         <div class="stats">
             <p id="heads-count">Heads: <span id="heads-count-num">0</span></p>
@@ -26,6 +28,7 @@
             <button id="reset-button">Reset</button>
         </div>
     </div>
+    <p id="footer">Built with &#10084; by <a href="https://www.davidmvenegas.com" target="_blank" rel="noopener noreferrer">David Venegas</a></p>
 
     <script src="./index.js"></script>
 </body>
